nav, footer, and head

--- a/extra.html
+++ b/extra.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/home.css">
+    <title>Extra</title>
 </head>
 <body>
+    <div id="title-block">
+        <div class="title-child">
+            <h1>Fruit Rules</h1>
+        </div>
+        <div class="title-child">
+            <button id="sign-in-button">
+                Sign In
+            </button>
+        </div>
+        <nav id="nav-bar">
+            <ul>
+                <li class="nav-child"><a href="">Home</a></li>
+                <li class="nav-child"><a href="">News</a></li>
+                <li class="nav-child"><a href="">FOW</a></li> 
+                <li class="nav-child"><a href="">Extra</a></li>
+            </ul>
+        </nav>
+
+    </div>
+    <footer>
+        <nav id="footer">
+            <ol>
+                <li class="footer-child"><a href="">Contact Us</a></li>
+                <li class="footer-child"><a href="">About Me</a></li>
+                <li class="footer-child"><a href=""></a>Terms of Use</li>
+                <li class="footer-child"><a href="">Privacy</a></li>
+            </ol>
+
+        </nav>
+
+    </footer>
     
 </body>
+
 </html>
