--- a/fow.html
+++ b/fow.html
@@ -20,11 +20,14 @@
             <ul>
                 <li class="nav-child"><a href="">Home</a></li>
                 <li class="nav-child"><a href="">News</a></li>
-                <li class="nav-child"><a href="">FOW</a></li> 
+                <li class="nav-child"><a href="./fow.html">FOW</a></li> 
                 <li class="nav-child"><a href="">Extra</a></li>
             </ul>
         </nav>
 
+    </div>
+    <div>
+        <img src="./images/mango-fruit-ready-for-harvesting.jpg" alt="mango-image1">
     </div>
     <footer>
         <nav id="footer">
