--- a/news.html
+++ b/news.html
@@ -18,10 +18,10 @@
         </div>
         <nav id="nav-bar">
             <ul>
-                <li class="nav-child"><a href="">Home</a></li>
-                <li class="nav-child"><a href="">News</a></li>
-                <li class="nav-child"><a href="">FOW</a></li> 
-                <li class="nav-child"><a href="">Extra</a></li>
+                <li class="nav-child"><a href="./home.html">Home</a></li>
+                <li class="nav-child"><a href="./news.html">News</a></li>
+                <li class="nav-child"><a href="./fow.html">FOW</a></li> 
+                <li class="nav-child"><a href="./extra.html">Extra</a></li>
             </ul>
         </nav>
 
