--- a/home.html
+++ b/home.html
@@ -16,31 +16,36 @@
                 Sign In
             </button>
         </div>
+        
+
+    </div>
+    <div class="nav-div">
         <nav id="nav-bar">
-            <ul>
+            <ol>
                 <li class="nav-child"><a href="./home.html">Home</a></li>
                 <li class="nav-child"><a href="./news.html">News</a></li>
                 <li class="nav-child"><a href="./fow.html">FOW</a></li> 
                 <li class="nav-child"><a href="./extra.html">Extra</a></li>
-            </ul>
+            </ol>
         </nav>
-
     </div>
-    <div>
+    
+    <div class="img-div">
         <img src="./images/vibrantfruit.avif" alt="vibrant-fruit">
     </div>
-    <p class="home-paragraphs">
+    <p id="pg-1" class="home-paragraphs">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
-    <p class="home-paragraphs">
+    <p id="pg-2" class="home-paragraphs">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
+    <div class="spacer"></div>
     <footer>
         <nav id="footer">
             <ol>
                 <li class="footer-child"><a href="">Contact Us</a></li>
                 <li class="footer-child"><a href="">About Me</a></li>
-                <li class="footer-child"><a href=""></a>Terms of Use</li>
+                <li class="footer-child"><a href="">Terms of Use</a></li>
                 <li class="footer-child"><a href="">Privacy</a></li>
             </ol>
 
