--- a/home.html
+++ b/home.html
@@ -22,10 +22,10 @@
     <div class="nav-div">
         <nav id="nav-bar">
             <ol>
-                <li class="nav-child"><a href="./home.html">Home</a></li>
-                <li class="nav-child"><a href="./news.html">News</a></li>
-                <li class="nav-child"><a href="./fow.html">FOW</a></li> 
-                <li class="nav-child"><a href="./extra.html">Extra</a></li>
+                <li class="nav-child"><a href="/Users/maricio.harris/personal-projects/Fruit-Rules2024/home.html">Home</a></li>
+                <li class="nav-child"><a href="/Users/maricio.harris/personal-projects/Fruit-Rules2024/news.html">News</a></li>
+                <li class="nav-child"><a href="/Users/maricio.harris/personal-projects/Fruit-Rules2024/fow.html">FOW</a></li> 
+                <li class="nav-child"><a href="/Users/maricio.harris/personal-projects/Fruit-Rules2024/extra.html">Extra</a></li>
             </ol>
         </nav>
     </div>
@@ -43,7 +43,7 @@
     <footer>
         <nav id="footer">
             <ol>
-                <li class="footer-child"><a href="">Contact Us</a></li>
+                <li class="footer-child"><a href="/Users/maricio.harris/personal-projects/Fruit-Rules2024/contact.html">Contact Us</a></li>
                 <li class="footer-child"><a href="">About Me</a></li>
                 <li class="footer-child"><a href="">Terms of Use</a></li>
                 <li class="footer-child"><a href="">Privacy</a></li>
