--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,10 @@
         </div>
         <nav id="nav-bar">
             <ul>
-                <li class="nav-child"><a href="">Home</a></li>
-                <li class="nav-child"><a href="">News</a></li>
-                <li class="nav-child"><a href="">FOW</a></li> 
-                <li class="nav-child"><a href="">Extra</a></li>
+                <li class="nav-child"><a href="/Users/maricio.harris/personal-projects/Fruit-Rules2024/home.html">Home</a></li>
+                <li class="nav-child"><a href="/Users/maricio.harris/personal-projects/Fruit-Rules2024/news.html">News</a></li>
+                <li class="nav-child"><a href="/Users/maricio.harris/personal-projects/Fruit-Rules2024/fow.html">FOW</a></li> 
+                <li class="nav-child"><a href="/Users/maricio.harris/personal-projects/Fruit-Rules2024/extra.html">Extra</a></li>
             </ul>
         </nav>
 
