beginning of day

--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
             </ol>
         </nav>
     </div>
-    
+    <div id="welcome-msg"><h1>Welcome to Fruit Rules</h1></div>
     <div class="img-div">
         <img src="./images/vibrantfruit.avif" alt="vibrant-fruit">
     </div>
