added new components

--- a/news.html
+++ b/news.html
@@ -27,6 +27,36 @@
         </nav>
 
     </div>
+    <div>
+        <h1>News</h1>
+    </div>
+    <section id="news-1">
+        <div>
+            <h2>Something News Relevant</h2>
+            <ol>
+                <li><a href="">article-link</a></li>
+                <li><a href="">article-link</a></li>
+                <li><a href="">article-link</a></li>
+            </ol>
+        </div>
+        <div>
+            <h2>Something News Relevant</h2>
+            <ol>
+                <li><a href="">article-link</a></li>
+                <li><a href="">article-link</a></li>
+                <li><a href="">article-link</a></li>
+            </ol>
+        </div>
+        <div>
+             <h2>Something News Relevant</h2>
+             <ol>
+                <li><a href="">article-link</a></li>
+                <li><a href="">article-link</a></li>
+                <li><a href="">article-link</a></li>
+            </ol> 
+        </div>
+    </section>
+    
     <footer>
         <nav id="footer">
             <ol>
